kubernetes/components/cnpg/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: ${APP}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ${APP}
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: ${APP}
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: cloudnative-pg
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 8000
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9187
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: ${APP}
      ports:
        - port: 5432
          protocol: TCP
        - port: 8000
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: barman-cloud
              app.kubernetes.io/name: plugin-barman-cloud
      ports:
        - port: 9090
          protocol: TCP
---
# This complements the database ingress rule when the app namespace is default-deny.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-postgres-client
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ${APP}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: ${APP}
      ports:
        - port: 5432
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}-postgres-system
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: ${APP}
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchName: ${APP}-r
              - matchName: ${APP}-r.${NAMESPACE}
              - matchName: ${APP}-r.${NAMESPACE}.svc
              - matchName: ${APP}-r.${NAMESPACE}.svc.cluster.local
              - matchName: ${APP}-ro
              - matchName: ${APP}-ro.${NAMESPACE}
              - matchName: ${APP}-ro.${NAMESPACE}.svc
              - matchName: ${APP}-ro.${NAMESPACE}.svc.cluster.local
              - matchName: ${APP}-rw
              - matchName: ${APP}-rw.${NAMESPACE}
              - matchName: ${APP}-rw.${NAMESPACE}.svc
              - matchName: ${APP}-rw.${NAMESPACE}.svc.cluster.local
              - matchName: barman-cloud
              - matchName: barman-cloud.database
              - matchName: barman-cloud.database.svc
              - matchName: barman-cloud.database.svc.cluster.local
              - matchPattern: "*.r2.cloudflarestorage.com"
              - matchPattern: "*.r2.cloudflarestorage.com.${NAMESPACE}.svc.cluster.local"
              - matchPattern: "*.r2.cloudflarestorage.com.svc.cluster.local"
              - matchPattern: "*.r2.cloudflarestorage.com.cluster.local"
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
        - matchPattern: "*.r2.cloudflarestorage.com.${NAMESPACE}.svc.cluster.local"
        - matchPattern: "*.r2.cloudflarestorage.com.svc.cluster.local"
        - matchPattern: "*.r2.cloudflarestorage.com.cluster.local"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
